bugfix - ta bort spacing under gamecard (blir onödig scroll i iPhone läge)

--- a/src/less/newdices.less
+++ b/src/less/newdices.less
@@ -1,6 +1,5 @@
 .dices-container-main{
     width: 100%;
-    height: 100vh;
     float: right;
     margin-right: 10px;
 
